--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "*"
+        "spatie/laravel-permission": "*",
+        "tomatophp/filament-api": "^1.0",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
